--- a/style.css
+++ b/style.css
@@ -1,64 +1,61 @@
-@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
 
-*{
+
+* {
     padding: 0;
-    margin: 0;
+    margin:0;
 }
 
-body {
-    background-color: #000000;
-    font-family: Arial, sans-serif;
-    color: #ffffff;
+body{
     height: 100vh;
     box-sizing: border-box;
-
+    background-color: #000000;
+    color: #F6F6F6;
 }
 
-h1 {
-    font-size: 36px;
-    margin: 0;
-    padding: 0;
-    font-family: "Krona One", serif;
-}
 
 .title-strong {
-    color: #22D4FD;
+    color: #22D4FD; ;
+}
+
+.presentacion {
+    margin: 10% 15%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.presentacion-contenido{
+    width: 615px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+h1{
+    font-size: 36px;
+    font-family: 'Krona One', sans-serif;
 }
 
 .presentacion-texto{
     font-size: 24px;
-    margin: 0;
-    padding: 0;
-    font-family: "Montserrat", serif; 
+    font-family: 'Montserrat', sans-serif;
 }
 
-span {
-    color: #000000;
-    text-decoration: none;
-    border: 2px solid #22D4FD;
-    background-color: #22D4FD;
-    padding-top: 16px;
-    padding-bottom: 16px;
-    padding-left: 16px;
-    padding-right: 16px;
-    border-radius: 14%;
-    
-}
-
-a {
-    color: #000000;
-    text-decoration: none;
-}
-
-.presentacion {
+.presentacion-redes{
     display: flex;
-    align-items: center;
-    margin: 5%;
     justify-content: space-between;
 }
 
-
-.presentacion-contenido {
-    width: 615px;
-    
+.presentacion-links{
+    background-color: #22D4FD;
+    width: 280px;
+    text-align: center;
+    border-radius: 16px;
+    font-size: 24px;
+    font-weight: 600;
+    padding: 21.5px 0;
+    text-decoration: none;
+    color: #000000;
+    font-family: 'Montserrat', sans-serif;
 }
