--- a/style.css
+++ b/style.css
@@ -45,17 +45,27 @@ h1{
 .presentacion-redes{
     display: flex;
     justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    gap: 32px;
 }
 
 .presentacion-links{
-    background-color: #22D4FD;
-    width: 280px;
+    
+    width: 378px;
     text-align: center;
-    border-radius: 16px;
+    border-radius: 8px;
     font-size: 24px;
     font-weight: 600;
     padding: 21.5px 0;
     text-decoration: none;
-    color: #000000;
+    color: #ffffff;
     font-family: 'Montserrat', sans-serif;
+    border: #22D4FD 2px solid;
+}
+
+.presentacion-redes-subtitulo{
+    font-size: 24px;
+    font-family: 'Krona One', sans-serif;
+    font-weight: 400;
 }
