--- a/styles/style.css
+++ b/styles/style.css
@@ -53,7 +53,7 @@ body{
     gap: 40px;
 }
 
-h1{
+.presentacion-contenido-titulo{
     font-size: 36px;
     font-family: 'Krona One', sans-serif;
 }
