--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Krona+One&family=Montserrat:wght@400;600&display=swap');
 
+:root{
+    --color-1: #000000;
+    --color-2: #F6F6F6;
+    --color-3: #22D4FD;
+    --color-4: #272727;
+
+    --fuente-montserrat: 'Montserrat', sans-serif;
+    --fuente-krona: 'Krona One', sans-serif;
+}
 
 * {
     padding: 0;
@@ -8,7 +17,7 @@
 
 body{
     box-sizing: border-box;
-    background-color: #000000;
+    background-color: var(--color-1);
     color: #F6F6F6;
 }
 
@@ -23,8 +32,8 @@ body{
 }
 
 .header-menu-link{
-    color: #22D4FD;
-    font-family: 'Montserrat', sans-serif;
+    color: var(--color-3);
+    font-family: var(--fuente-montserrat);
     font-size: 24px;
     font-weight: 600;
     text-decoration: none;
@@ -32,11 +41,11 @@ body{
 }
 
 .header-menu-link:hover{
-    color: #ffffff;
+    color: var(--color-2);
 }
 
 .title-strong {
-    color: #22D4FD; ;
+    color: var(--color-3) ;
 }
 
 .presentacion {
@@ -55,12 +64,12 @@ body{
 
 .presentacion-contenido-titulo{
     font-size: 36px;
-    font-family: 'Krona One', sans-serif;
+    font-family: var(--fuente-krona);
 }
 
 .presentacion-texto{
     font-size: 24px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--fuente-montserrat);
 }
 
 .presentacion-redes{
@@ -80,9 +89,9 @@ body{
     font-weight: 600;
     padding: 21.5px 0;
     text-decoration: none;
-    color: #ffffff;
-    font-family: 'Montserrat', sans-serif;
-    border: #22D4FD 2px solid;
+    color: var(--color-2);
+    font-family: var(--fuente-montserrat);
+    border: var(--color-3) 2px solid;
     display: flex;
     justify-content: center;
     gap: 10px;
@@ -90,27 +99,27 @@ body{
 
 .presentacion-redes-subtitulo{
     font-size: 24px;
-    font-family: 'Krona One', sans-serif;
+    font-family: var(--fuente-krona);
     font-weight: 400;
 }
 
 .presentacion-links:hover{
-    background-color: #272727;
+    background-color: var(--color-4);
     
 }
 
 .name-strong:hover{
-    color: #22D4FD;
+    color: var(--color-3);
 }
 
 .footer{
     display: flex;
     flex-direction: column;
-    background-color: #22D4FD;
-    padding: 10px ;
-    color: black;
+    background-color: var(--color-3);
+    padding: 10px 10px 0px 10px;
+    color: var(--color-1);
     text-align: center;
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--fuente-montserrat);
     font-size: 24px;
     font-weight: 400;
     display: flex;
@@ -120,7 +129,7 @@ body{
 
 .foot-p{
     font-size: 20px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: var(--fuente-montserrat);
     font-weight: 400;
 }
 
