--- a/styles/style.css
+++ b/styles/style.css
@@ -18,7 +18,7 @@
 body{
     box-sizing: border-box;
     background-color: var(--color-1);
-    color: #F6F6F6;
+    color: var(--color-2);
 }
 
 .header{
@@ -34,7 +34,7 @@ body{
 .header-menu-link{
     color: var(--color-3);
     font-family: var(--fuente-montserrat);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 600;
     text-decoration: none;
     
@@ -53,22 +53,23 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 82px;
 }
 
 .presentacion-contenido{
-    width: 615px;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 40px;
 }
 
 .presentacion-contenido-titulo{
-    font-size: 36px;
+    font-size: 2.25rem;
     font-family: var(--fuente-krona);
 }
 
 .presentacion-texto{
-    font-size: 24px;
+    font-size: 1.5rem;
     font-family: var(--fuente-montserrat);
 }
 
@@ -82,10 +83,10 @@ body{
 
 .presentacion-links{
     
-    width: 378px;
+    width: 50%;
     text-align: center;
     border-radius: 8px;
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 600;
     padding: 21.5px 0;
     text-decoration: none;
@@ -98,7 +99,7 @@ body{
 }
 
 .presentacion-redes-subtitulo{
-    font-size: 24px;
+    font-size: 1.5rem;
     font-family: var(--fuente-krona);
     font-weight: 400;
 }
@@ -112,6 +113,9 @@ body{
     color: var(--color-3);
 }
 
+.presentacion-imagen{
+    width: 50%;
+}
 .footer{
     display: flex;
     flex-direction: column;
@@ -120,7 +124,7 @@ body{
     color: var(--color-1);
     text-align: center;
     font-family: var(--fuente-montserrat);
-    font-size: 24px;
+    font-size: 1.5rem;
     font-weight: 400;
     display: flex;
     justify-content: center;
@@ -135,4 +139,29 @@ body{
 
 .github-link{
     text-decoration: none;
+}
+
+@media (max-width: 1200px){
+    .header{
+        padding: 10%;
+    }
+
+    .header-menu{
+        justify-content: center;
+        gap: 40px;
+    }
+
+    .presentacion{
+        padding: 7% 5%;
+        flex-direction: column-reverse;
+        gap: 40px;
+    }
+
+    .presentacion-contenido{
+        width: auto;
+    }
+
+    .footer{
+        padding: 10px 5px 0px 5px;
+    }
 }
